web-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: web
  name: web
spec:
  ports:
  - name: port-1
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: port-2
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: web
  sessionAffinity: None
  type: LoadBalancer
